tests/exceptions/ill-typed/unexpected-type-for-expression-try-with-2.stella
language core;

extend with #exceptions, #exception-type-declaration;

exception type = Nat

fn fail(n : Nat) -> Nat {
  return throw(succ(0))
}

fn main(n : Nat) -> Bool {
  return try {
    fail(n)
  } catch {
    a => succ(0)
  }
}
